doen with footer and fixed the issue with scrollbars

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,4 @@
+@media (min-width: 280px) and (max-width: 766px){
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -9,9 +10,6 @@
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
 }
 
 body{
@@ -20,25 +18,38 @@ body{
   justify-content: center;
   width: 100%;
   height: 100vh;
+  margin: 0%;
 }
 
 header{
   background-color: white;
   color: black;
   display: flex;
-  position: fixed;
+  position: absolute;
   justify-content: center;
   width: 100%;
   top: 0%;
   left: 0%;
+  margin: 0%;
+}
+
+footer{
+  background-color: white;
+  color: black;
+  display: flex;
+  position: absolute;
+  justify-content: center;
+  width: 100%;
+  bottom: 0%;
+  left: 0%;
+  margin: 0%;
 }
 
 .changeEverything{
-  display: flex;
-  background-color: yellow;
+  display: block;
+  background-color: red;
   color: black;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  margin: 0%;
 }
 
 @media (prefers-color-scheme: light) {
@@ -52,4 +63,5 @@ header{
   button {
     background-color: #f9f9f9;
   }
+}
 }
